[gd_scene load_steps=23 format=2]

[ext_resource path="res://Menus/Startmenu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Custom_Font_Custom_Credits.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Startmenu/Speedware_Logo_01_BryanPrintz.png" type="Texture" id=3]
[ext_resource path="res://Player/Character_Sprite_Yellow.png" type="Texture" id=4]
[ext_resource path="res://Menus/Startmenu/Buttons.gd" type="Script" id=5]
[ext_resource path="res://Menus/Buttons/MenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menus/Buttons/ContinueButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menus/Buttons/LevelSelectionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Menus/Buttons/OptionsButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menus/Buttons/Chat_Logs.tscn" type="PackedScene" id=10]
[ext_resource path="res://Menus/Buttons/ExitButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sounds/Elevator Music #1 - Full Version _ No Copyright Sound Effect.ogg" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]

resource_name = "ChatLogsMouseHover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Chat_Logs:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chat_Logs:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -73, 348 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "ChatLogsMouseHoverDown"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Chat_Logs:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chat_Logs:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 360 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "ExitMouseHover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -54, 466 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "ExitMouseHoverDown"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 480 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "LevelSelectionMouseHover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LevelSelectionButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelSelectionButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -112, 100 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "LevelSelectionMouseHoverDown"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LevelSelectionButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelSelectionButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 120 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "NewGameMouseHover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Start Game:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Start Game:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -82, -4 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "NewGameMouseHoverDown"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Start Game:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Start Game:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "OptionMouseHover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -52, 235 ) ]
}

[sub_resource type="Animation" id=10]

resource_name = "OptionMouseHoverDown"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 240 ) ]
}

[node name="TitleScreen" type="Control" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Menu" type="VBoxContainer" parent="." index="0"]

pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -799.0
margin_top = -430.5
margin_right = 799.0
margin_bottom = 430.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Pause" ]

[node name="Gamename" type="Label" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1598.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "                     Speedware"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Logo" type="TextureRect" parent="Menu" index="1"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1598.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Pause" ]

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 1598.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Pause", "Size Flags" ]

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 797.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Pause" ]

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 148.0
margin_top = 20.0
margin_right = 648.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow" index="1"]

pause_mode = 2
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 801.0
margin_right = 1598.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Margin", "Pause", "Size Flags", "custom_constants" ]

[node name="Start Game" parent="Menu/CenterRow/Buttons" index="0" instance=ExtResource( 6 )]

pause_mode = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 797.0
margin_bottom = 60.0
rect_scale = Vector2( 1, 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Continue" parent="Menu/CenterRow/Buttons" index="1" instance=ExtResource( 7 )]

pause_mode = 2
visible = false
margin_left = 0.0
margin_top = 120.0
margin_right = 797.0
margin_bottom = 180.0
rect_scale = Vector2( 1, 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="LevelSelectionButton" parent="Menu/CenterRow/Buttons" index="2" instance=ExtResource( 8 )]

margin_left = 0.0
margin_top = 120.0
margin_right = 797.0
margin_bottom = 180.0
rect_scale = Vector2( 1, 1 )

[node name="Options" parent="Menu/CenterRow/Buttons" index="3" instance=ExtResource( 9 )]

pause_mode = 2
margin_left = 0.0
margin_top = 240.0
margin_right = 797.0
margin_bottom = 300.0
rect_scale = Vector2( 1, 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Chat_Logs" parent="Menu/CenterRow/Buttons" index="4" instance=ExtResource( 10 )]

pause_mode = 2
margin_left = 0.0
margin_top = 360.0
margin_right = 797.0
margin_bottom = 420.0
rect_scale = Vector2( 1, 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Exit" parent="Menu/CenterRow/Buttons" index="5" instance=ExtResource( 11 )]

pause_mode = 2
margin_left = 0.0
margin_top = 480.0
margin_right = 797.0
margin_bottom = 540.0
rect_scale = Vector2( 1, 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/CenterRow/Buttons" index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ChatLogsMouseHover = SubResource( 1 )
anims/ChatLogsMouseHoverDown = SubResource( 2 )
anims/ExitMouseHover = SubResource( 3 )
anims/ExitMouseHoverDown = SubResource( 4 )
anims/LevelSelectionMouseHover = SubResource( 5 )
anims/LevelSelectionMouseHoverDown = SubResource( 6 )
anims/NewGameMouseHover = SubResource( 7 )
anims/NewGameMouseHoverDown = SubResource( 8 )
anims/OptionMouseHover = SubResource( 9 )
anims/OptionMouseHoverDown = SubResource( 10 )
blend_times = [  ]

[node name="VersionLabel" type="Label" parent="Menu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 580.0
margin_right = 1598.0
margin_bottom = 861.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="StartMenuMusic" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Music"

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/Start Game" to="Menu/CenterRow/Buttons" method="_on_Start_Game_mouse_entered"]

[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/Start Game" to="Menu/CenterRow/Buttons" method="_on_Start_Game_mouse_exited"]

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/LevelSelectionButton" to="Menu/CenterRow/Buttons" method="_on_LevelSelectionButton_mouse_entered"]

[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/LevelSelectionButton" to="Menu/CenterRow/Buttons" method="_on_LevelSelectionButton_mouse_exited"]

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/Options" to="Menu/CenterRow/Buttons" method="_on_Options_mouse_entered"]

[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/Options" to="Menu/CenterRow/Buttons" method="_on_Options_mouse_exited"]

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/Chat_Logs" to="Menu/CenterRow/Buttons" method="_on_Chat_Logs_mouse_entered"]

[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/Chat_Logs" to="Menu/CenterRow/Buttons" method="_on_Chat_Logs_mouse_exited"]

[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/Exit" to="Menu/CenterRow/Buttons" method="_on_Exit_mouse_entered"]

[connection signal="mouse_exited" from="Menu/CenterRow/Buttons/Exit" to="Menu/CenterRow/Buttons" method="_on_Exit_mouse_exited"]


